# PlausiDen-Loom

./: .composition-baseline.json  .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TOOLS.md  clippy.toml  deny.toml  trait-manifest.toml
.cargo/: audit.toml
.claude/: settings.json
.github/workflows/: audit.yml  ci.yml  composition.yml  coverage.yml
docs/: CONSUMER_SHAPING_AUDIT.md  DESIGN.md  ISO_STANDARDS.md  LAYOUT_CONSISTENCY_DESIGN_624.md  LOOM_VISION.md  NOSCRIPT_AUDIT.md  PRIMITIVE_TIERS.md  REFERENCE_CORPUS.md  THEME_TOGGLE_DESIGN.md  USAGE.md
loom-assets/: Cargo.toml  LICENSES.md  SOURCES.md
loom-assets/src/: lib.rs
loom-bridge/: Cargo.toml
loom-bridge/src/: bridge_session.rs  bwrap.rs  cgroup.rs  cookie_bridge.rs  egress.rs  exec_spec.rs  host_key.rs  lib.rs  resolver.rs  resource.rs  sandbox.rs  sandbox_params.rs  spawn.rs  spawn_async.rs  tenant.rs  transport.rs
loom-bridge/tests/: russh_client_round_trip.rs
loom-cli/: Cargo.toml
loom-cli/src/: audit.rs  audit_bridge.rs  cms_new.rs  critical_css.rs  doctor.rs  gtk_theme.rs  hooks_install.rs  journey_from_cms.rs  lint.rs  main.rs  new.rs  report.rs  state_matrix.rs  test_support.rs  validate.rs  version_admin.rs  walk.rs
loom-cli/src/cmd/: doctor.rs  lint.rs  mod.rs
loom-cli/tests/: report_collector_e2e.rs  report_review_e2e.rs  report_stats_e2e.rs  report_tail_e2e.rs  revisions_e2e.rs  section_reorder_e2e.rs
loom-cms-render/: Cargo.toml
loom-cms-render/src/: lib.rs
loom-cms-render/tests/: visual_uniqueness.rs
loom-components/: Cargo.toml
loom-components/src/: badge.rs  button.rs  card.rs  code_shell.rs  composer.rs  footer.rs  form.rs  hero.rs  lib.rs  link.rs  modal.rs  nav.rs  picture.rs  pull_quote.rs  section.rs  slots.rs  toast.rs  typography.rs
loom-egui/: Cargo.toml
loom-egui/src/: lib.rs
loom-icons/: Cargo.toml
loom-icons/src/: lib.rs
loom-lint/: Cargo.toml
loom-lint/src/: lib.rs
loom-tokens/: Cargo.toml  build.rs
loom-tokens/src/: axes.rs  color.rs  density.rs  gradient_pool.rs  icons.rs  lib.rs  polish.rs  radius.rs  scale.rs  skin.css  stock_photos.rs  style_packs.rs
loom-tui/: Cargo.toml
loom-tui/src/: lib.rs
loom-variables/: Cargo.toml
loom-variables/src/: lib.rs
reports/: build-20260520T072037439822075Z.json  build-20260520T072044221394983Z.json  build-20260520T072318143031149Z.json  build-20260520T072327796110692Z.json
