[workspace]
resolver = "2"
members = [
    "loom-tokens",
    "loom-icons",
    "loom-components",
    "loom-cms-render",
    "loom-lint",
    "loom-cli",
]
exclude = [
    # loom-audit will land in a follow-up; reserved here so the
    # workspace name is taken.
    "loom-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/thepictishbeast/PlausiDen-Loom"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = "0.27"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
regex = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
