[workspace]
resolver = "2"
members = [
    "loom-assets",
    "loom-tokens",
    "loom-icons",
    "loom-components",
    "loom-cms-render",
    "loom-lint",
    "loom-cli",
    # T46 cycle 2 (advances #598): typed tenant + resource-ceiling
    # model for the sandboxed Claude Code SSH bridge. The russh
    # transport lives behind the `russh-transport` feature so the
    # default workspace build stays fast and tokio-free.
    "loom-bridge",
    # #120: CmsPage → ratatui Text. Pure renderer; CLI binary
    # that drives the TUI event loop is a follow-up.
    "loom-tui",
    # #121: CmsPage → egui Ui draws. Pure renderer; binary that
    # drives eframe / glow / wgpu / winit is a follow-up.
    "loom-egui",
    # #322 (paul 2026-05-21): loom-variables — per-tenant
    # `{{ VAR }}` / `@asset-slug` substitution layer. Tenants
    # ship variables.json + palette.json + assets-map.json; the
    # substrate's CMS authoring layer carries placeholders that
    # this crate resolves at render time.
    "loom-variables",
]
exclude = [
    # loom-audit will land in a follow-up; reserved here so the
    # workspace name is taken.
    "loom-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/thepictishbeast/PlausiDen-Loom"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = "0.27"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
regex = "1"
sha2 = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
