[package]
name = "loom-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-Loom — sandboxed per-tenant Claude Code SSH bridge (T46). Routes admin-portal chat sessions to a jailed `claude --resume` invocation under a per-tenant unix user with cgroup CPU+memory ceilings and an anthropic+GitHub-only egress allowlist."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# T46 cycle 2 (advances #598): only the public ed25519 key store
# + per-tenant identity model lands this cycle. Russh wiring comes
# in cycle 3 once the protocol contract stabilises — gating russh
# behind a feature flag keeps the dep graph (and CI build time)
# bounded for the early-cycle iteration.
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
base64 = "0.22"
thiserror = "1"
# Constant-time byte comparison for any auth-path equality check that
# can't lean on a CT primitive built into the underlying lib. Ed25519
# signature verification already runs in CT inside dalek; this is
# defence-in-depth at the tenant-lookup layer (a malicious key with
# the right prefix shouldn't be observable through timing on the
# tenant-id branch).
subtle = "2"
# T46.4: HMAC-SHA256-signed session cookies. RustCrypto stack —
# audited, no-std-friendly, zeroize-aware.
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

[features]
# Default: no SSH transport, just the typed tenant + key model
# the loom-cli already wires in. The russh transport feature
# pulls in tokio + russh + async-trait + tracing for the server impl.
default = []
russh-transport = ["dep:russh", "dep:tokio", "dep:async-trait", "dep:tracing"]

[dependencies.russh]
version = "0.60"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies]
tempfile = "3"
# Cycle-3 transport tests mint fresh ed25519 keys via OsRng.
rand_core = { version = "0.6", features = ["getrandom"] }
