[package]
name = "loom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-Loom: top-level CLI. `loom lint`, `loom audit`, `loom new`, `loom tokens`."

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom-cms-render = { path = "../loom-cms-render", version = "0.1" }
loom-lint = { path = "../loom-lint", version = "0.1" }
loom-tokens = { path = "../loom-tokens", version = "0.1" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
toml = "0.8"
toml_edit = "0.22"
# T42: tiny http server for the typed CMS editor. Single-threaded,
# blocking, stdlib-shaped — fits the "no JS, no async runtime,
# server-rendered forms" doctrine. ~3k LOC, maintained, no transitive
# bloat. Production deploy fronts it with nginx.
tiny_http = "0.12"
# T42: parse multipart/form-urlencoded POST bodies. Lighter than a
# full async multipart crate.
urlencoding = "2"
# T43: Argon2id password hashing — OWASP-recommended, memory-hard,
# GPU-resistant. RustCrypto, audited.
argon2 = "0.5"
# T43: HMAC-SHA256 for stateless signed session cookies. RustCrypto.
hmac = "0.12"
# T43: constant-time secret comparison.
subtle = "2"
# T43: persist auth secrets + session signing key to disk via a
# directory we can lock down to mode 0700. dirs-next chosen over
# dirs (latter unmaintained); 50 LOC of platform glue.
dirs-next = "2"
# T43: OS RNG for salts + HMAC keys.
rand_core = { version = "0.6", features = ["std", "getrandom"] }
# T43: TOML serializer with serde for auth.toml.
serde = { version = "1", features = ["derive"] }
# T47c: Ed25519 signing for deploy manifests. Same crate
# PlausiDen-Forge uses (T56). Auditor with the attest-pubkey
# can prove a bundle was published by THIS loom instance.
ed25519-dalek = { version = "2", features = ["rand_core"] }
# T43d cycle 95c: ES256 signature verify for WebAuthn passkeys.
# RustCrypto p256 — pure Rust, no unsafe in hot paths, constant-
# time field ops, audited by rustls + sigstore + FIDO2 stacks.
# AVP-2 vet: hand-rolling ECDSA P-256 is forbidden ("no custom
# crypto"); p256 is the supersociety-correct choice.
p256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
# T45: SQLite-backed multi-tenant store. rusqlite "bundled" =
# pure-Rust libsqlite3 vendored at build time (no system
# dependency). AVP-2 vet: SQLite is the most-deployed database
# in the world (≥4× more than any other), public-domain license,
# 100% MC/DC test coverage in the upstream codebase.
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# T29: property-based tests on the contrast math + parser.
# AVP-2 Tier 6 mandates proptest for any module that ingests
# arbitrary input.
proptest = "1"

[lints]
workspace = true
