[package]
name = "loom-cms-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bridge from CMS page schema to Loom typed components. The single rendering pipeline for PlausiDen-CMS-driven pages."

[dependencies]
loom-components = { path = "../loom-components", version = "0.1" }
loom-icons = { path = "../loom-icons", version = "0.1" }
loom-variables = { path = "../loom-variables", version = "0.1" }
maud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
# T70b: page_shell needs sha256 hashes for CSP-pinning the
# base-theme inline <style> block. Same versions loom-cli was
# already pulling — moving the helper into the render layer
# rather than the CLI layer so Forge inherits the same
# dual-theme + a11y defaults via `loom_cms_render::page_shell`.
sha2 = "0.11"
base64 = "0.22"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
