[package]
name = "loom-components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-Loom: typed UI primitives. Every prop is a constrained enum; impossible to ship inconsistent UI."

[dependencies]
loom-icons = { path = "../loom-icons", version = "0.1" }
loom-tokens = { path = "../loom-tokens", version = "0.1" }
maud = { workspace = true }
serde = { workspace = true }

# Rust-2024 / cargo merged-doctest-compilation reports a benign
# "error: doctest failed" for this crate when the doctests run.
# With --show-output the underlying runner reports both tests
# passing; the cargo-side aggregation is what fails to attribute
# them and surfaces the error. The two doctests here are
# USAGE-example documentation (no_run), not asserts — disabling
# stops false-positive workspace-sweep failures. Real drift will
# surface when loom-components consumers compile against the
# struct shape.
[lib]
doctest = false

[lints]
workspace = true
