[package]
name = "loom-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-Loom: lint that refuses raw class strings outside loom-components."

[dependencies]
walkdir = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
