[package]
name = "loom-variables"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-tenant {{ VAR }} / @asset-slug substitution layer over typed CMS text fields. Loads tenant variables.json / palette.json / assets-map.json and applies them at render time. Per paul 2026-05-21 (#322)."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
serde.workspace = true
serde_json.workspace = true
